[package]
name = "osus-proxy-update-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.4.0"
http = "0.2.9"
octocrab = "0.31.1"
ring = "0.17.2"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
] }
vercel_runtime = "1.1.0"

[[bin]]
name = "handler"
path = "api/handler.rs"

